Changed layout + colour scheme

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Read Only by HTML5 UP</title>
+		<title>Yaman Ashqar</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -17,25 +17,22 @@
 			<section id="header">
 				<header>
 					<span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
-					<h1 id="logo"><a href="#">Willis Corto</a></h1>
-					<p>I got reprogrammed by a rogue AI<br />
-					and now I'm totally cray</p>
+					<h1 id="logo"><a href="#">Yaman Ashqar</a></h1>
+					<p>University of Adelaide<br />
+					BCompSci | Second Year</p>
 				</header>
 				<nav id="nav">
 					<ul>
 						<li><a href="#one" class="active">About</a></li>
-						<li><a href="#two">Things I Can Do</a></li>
-						<li><a href="#three">A Few Accomplishments</a></li>
+						<!-- <li><a href="#two">Things I Can Do</a></li> -->
+						<li><a href="#three">Projects</a></li>
 						<li><a href="#four">Contact</a></li>
 					</ul>
 				</nav>
 				<footer>
 					<ul class="icons">
-						<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="https://www.linkedin.com/in/yaman-ashqar-68325a268/" target="_blank" class="icon brands fa-linkedin"><span class="label">Instagram</span></a></li>
+						<li><a href="https://github.com/Arab-Man" target="_blank" class="icon brands fa-github"><span class="label">Github</span></a></li>
 					</ul>
 				</footer>
 			</section>
@@ -53,16 +50,21 @@
 								</div>
 								<div class="container">
 									<header class="major">
-										<h2>Read Only</h2>
-										<p>Just an incredibly simple responsive site<br />
-										template freebie by <a href="http://html5up.net">HTML5 UP</a>.</p>
+										<h2 style="font-size: 55px;">About</h2>
 									</header>
-									<p>Faucibus sed lobortis aliquam lorem blandit. Lorem eu nunc metus col. Commodo id in arcu ante lorem ipsum sed accumsan erat praesent faucibus commodo ac mi lacus. Adipiscing mi ac commodo. Vis aliquet tortor ultricies non ante erat nunc integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum.</p>
+									<p style="font-size: 22px;">Hi, I'm Yaman. I am an undergraduate student pursuing Computer Science at the University of Adelaide.
+									I enjoy creating software, solving challenges, and tackling problems head on. </br>
+									</br>
+									Besides computer science, I enjoy doing film-making and motion graphics. Although I mainly do those for fun, I am still more than happy to work on film related projects in the future. </br>
+									</br>
+									I am currently seeking any opportunities to use my skills in a professional setting. Mainly looking for software engineering internships.</br>
+									</br>
+									Down below are some of my projects.</p>
 								</div>
 							</section>
 
 						<!-- Two -->
-							<section id="two">
+							<!-- <section id="two">
 								<div class="container">
 									<h3>Things I Can Do</h3>
 									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer lorem ipsum dolor sit amet.</p>
@@ -75,19 +77,20 @@
 										<li class="icon solid fa-users">Shadow clone technique</li>
 									</ul>
 								</div>
-							</section>
+							</section> -->
 
 						<!-- Three -->
 							<section id="three">
 								<div class="container">
-									<h3>A Few Accomplishments</h3>
-									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
+									</header>
+									<h2 style="color:white">Projects</h2> 
 									<div class="features">
 										<article>
 											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
 											<div class="inner">
-												<h4>Possibly broke spacetime</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+												<h4 style="color:rgb(255, 255, 255)">Free-for-all Fighting Game</h4>
+												<p>Created a fighting game concept using Roblox's Lua 2.0 Engine. The project was scrapped due to the engine being updated which broke the code beyond repair.
+													2 or more players can duel it out in a free-for-all fighting game. Players spawn on different sides of maps and must duel it out to earn money. Players can use money to upgrade the look of their weapons and combat in style.</p>
 											</div>
 										</article>
 										<article>
@@ -467,7 +470,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 					<section id="footer">
 						<div class="container">
 							<ul class="copyright">
-								<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>Last Updated: February 2024.</li>
 							</ul>
 						</div>
 					</section>
