Modded projects, changed Contacts

--- a/index.html
+++ b/index.html
@@ -97,14 +97,20 @@
 											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
 											<div class="inner">
 												<h4 style="color:rgb(255, 255, 255)">Maze Exploration Game</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+												<p>Collaborated to create a small maze exploration game in c++ with an objective that
+													the player must reach. The game uses specially design artificial intelligence to
+													randomly generate the maze and to spawn items and enemies in the map.
+													</p>
 											</div>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
 											<div class="inner">
 												<h4 style="color:rgb(255, 255, 255)">Text-based Minesweeper</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+												<p>Created a text-based version of Minesweeper using MATLAB. User can choose the
+													size of the board and mines will be randomly placed on the grid. User must reveal all
+													cells without mines to win, and revealing a cell with a mine will result in a loss.
+													</p>
 											</div>
 										</article>
 									</div>
@@ -114,22 +120,14 @@
 						<!-- Four -->
 							<section id="four">
 								<div class="container">
-									<h3>Contact</h3>
-									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
-									<form method="post" action="#">
-										<div class="row gtr-uniform">
-											<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Name" /></div>
-											<div class="col-6 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Email" /></div>
-											<div class="col-12"><input type="text" name="subject" id="subject" placeholder="Subject" /></div>
-											<div class="col-12"><textarea name="message" id="message" placeholder="Message" rows="6"></textarea></div>
-											<div class="col-12">
-												<ul class="actions">
-													<li><input type="submit" class="primary" value="Send Message" /></li>
-													<li><input type="reset" value="Reset Form" /></li>
-												</ul>
-											</div>
-										</div>
-									</form>
+									<h3 style="color:rgb(255, 255, 255)">Contact</h3>
+									<i class="fas fa-home"></i><l>&ensp;</l><l>Adelaide, South Australia</l><br>
+									<i class="fas fa-envelope"></i><l>&ensp;</l><l><a href="mailto:yaman.ashqar05@outlook.com">yaman.ashqar05@outlook.com</a></l><br>
+									<i class="fas fa-phone"></i><l>&ensp;</l><l><a href="tel:+61410761137">+61 410 761 137</a></l><br>
+									<i class="icon brands fa-github"></i><l>&ensp;</l><l><a href="https://github.com/Arab-Man">Github</a></l><br>
+									<i class="icon brands fa-linkedin"></i><l>&ensp;</l><l><a href="https://www.linkedin.com/in/yaman-ashqar-68325a268/">LinkedIn</a></l><br>
+									
+
 								</div>
 							</section>
 
