added education section, changed hyperlinks

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 				<nav id="nav">
 					<ul>
 						<li><a href="#one" class="active">About</a></li>
-						<!-- <li><a href="#two">Things I Can Do</a></li> -->
+						<li><a href="#two">Education</a></li>
 						<li><a href="#three">Projects</a></li>
 						<li><a href="#four">Contact</a></li>
 					</ul>
@@ -64,20 +64,19 @@
 							</section>
 
 						<!-- Two -->
-							<!-- <section id="two">
+							 <section id="two">
 								<div class="container">
-									<h3>Things I Can Do</h3>
-									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer lorem ipsum dolor sit amet.</p>
-									<ul class="feature-icons">
-										<li class="icon solid fa-code">Write all the code</li>
-										<li class="icon solid fa-cubes">Stack small boxes</li>
-										<li class="icon solid fa-book">Read books and stuff</li>
-										<li class="icon solid fa-coffee">Drink much coffee</li>
-										<li class="icon solid fa-bolt">Lightning bolt</li>
-										<li class="icon solid fa-users">Shadow clone technique</li>
-									</ul>
+									<h3 style="color:white">Education</h3>
+									<div class="features">
+										<article>
+											<a class="image"><img src="images/adlUni.gif" alt="" style="width:325px;height:205px;"></a><br><br>
+												<h4 style="color: rgb(255, 255, 255)">The University of Adelaide (2023 - Current)</h4>
+												<p>I am currently pursuing a Bachelor of Computer Science at The University of Adelaide. I am an active member of the University of Adelaide community, including being a member of the Computer Science Club
+													and the Competitive Programming Club.</p>
+										</article>
+									</div>
 								</div>
-							</section> -->
+							</section> 
 
 						<!-- Three -->
 							<section id="three">
@@ -86,17 +85,17 @@
 									<h2 style="color:white">Projects</h2> 
 									<div class="features">
 										<article>
-											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
+											<a href="https://github.com/Arab-Man/Battle-Box" class="image" target="_blank"><img src="images/pic01.jpg" alt="" /></a>
 											<div class="inner">
-												<h4 style="color:rgb(255, 255, 255)">Free-for-all Fighting Game</h4>
+												<h4 style="color:rgb(255, 255, 255)"><a href="https://github.com/Arab-Man/Battle-Box" target="_blank">Free-for-all Fighting Game</a></h4>
 												<p>Created a fighting game concept using Roblox's Lua 2.0 Engine. The project was scrapped due to the engine being updated which broke the code beyond repair.
 													2 or more players can duel it out in a free-for-all fighting game. Players spawn on different sides of maps and must duel it out to earn money. Players can use money to upgrade the look of their weapons and combat in style.</p>
 											</div>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
+											<a href="https://github.com/Shas-9/Labyrinth-game" class="image" target="_blank"><img src="images/pic02.jpg" alt="" /></a>
 											<div class="inner">
-												<h4 style="color:rgb(255, 255, 255)">Maze Exploration Game</h4>
+												<h4 style="color:rgb(255, 255, 255)"><a href="https://github.com/Shas-9/Labyrinth-game" target="_blank">Maze Exploration Game</a></h4>
 												<p>Collaborated to create a small maze exploration game in c++ with an objective that
 													the player must reach. The game uses specially design artificial intelligence to
 													randomly generate the maze and to spawn items and enemies in the map.
