--- a/index.html
+++ b/index.html
@@ -89,7 +89,8 @@
 											<div class="inner">
 												<h4 style="color:rgb(255, 255, 255)"><a href="https://github.com/Arab-Man/Battle-Box" target="_blank">Free-for-all Fighting Game</a></h4>
 												<p>Created a fighting game concept using Roblox's Lua 2.0 Engine. The project was scrapped due to the engine being updated which broke the code beyond repair.
-													2 or more players can duel it out in a free-for-all fighting game. Players spawn on different sides of maps and must duel it out to earn money. Players can use money to upgrade the look of their weapons and combat in style.</p>
+													2 or more players can duel it out in a free-for-all fighting game. Players spawn on different sides of maps and must duel it out to earn money. Players can use money to upgrade the look of their weapons and combat in style.
+												</p>
 											</div>
 										</article>
 										<article>
@@ -99,7 +100,7 @@
 												<p>Collaborated to create a small maze exploration game in c++ with an objective that
 													the player must reach. The game uses specially design artificial intelligence to
 													randomly generate the maze and to spawn items and enemies in the map.
-													</p>
+												</p>
 											</div>
 										</article>
 										<article>
@@ -109,7 +110,7 @@
 												<p>Created a text-based version of Minesweeper using MATLAB. User can choose the
 													size of the board and mines will be randomly placed on the grid. User must reveal all
 													cells without mines to win, and revealing a cell with a mine will result in a loss.
-													</p>
+												</p>
 											</div>
 										</article>
 									</div>
