--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 				</nav>
 				<footer>
 					<ul class="icons">
-						<li><a href="https://www.linkedin.com/in/yaman-ashqar-68325a268/" target="_blank" class="icon brands fa-linkedin"><span class="label">Instagram</span></a></li>
+						<li><a href="https://www.linkedin.com/in/yaman-ashqar-68325a268/" target="_blank" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 						<li><a href="https://github.com/Arab-Man" target="_blank" class="icon brands fa-github"><span class="label">Github</span></a></li>
 					</ul>
 				</footer>
@@ -88,8 +88,9 @@
 											<a href="https://github.com/Arab-Man/Battle-Box" class="image" target="_blank"><img src="images/pic01.jpg" alt="" /></a>
 											<div class="inner">
 												<h4 style="color:rgb(255, 255, 255)"><a href="https://github.com/Arab-Man/Battle-Box" target="_blank">Free-for-all Fighting Game</a></h4>
-												<p>Created a fighting game concept using Roblox's Lua 2.0 Engine. The project was scrapped due to the engine being updated which broke the code beyond repair.
-													2 or more players can duel it out in a free-for-all fighting game. Players spawn on different sides of maps and must duel it out to earn money. Players can use money to upgrade the look of their weapons and combat in style.
+												<p>Wrote and designed a free-for-all fighting game using Lua 2.0. Models and meshes were created in RBLX Studio and Blender.
+													Players are randomly placed across the map and must duel until one remains, where money will be given to the winner which they can spend on customising their looks and weapons.
+													Features include an option to spectate other players, custom shop GUI, regional music system, and original map designs.
 												</p>
 											</div>
 										</article>
@@ -97,19 +98,19 @@
 											<a href="https://github.com/Shas-9/Labyrinth-game" class="image" target="_blank"><img src="images/pic02.jpg" alt="" /></a>
 											<div class="inner">
 												<h4 style="color:rgb(255, 255, 255)"><a href="https://github.com/Shas-9/Labyrinth-game" target="_blank">Maze Exploration Game</a></h4>
-												<p>Collaborated to create a small maze exploration game in c++ with an objective that
-													the player must reach. The game uses specially design artificial intelligence to
-													randomly generate the maze and to spawn items and enemies in the map.
+												<p>Collaborated in a team of 3 to create a small maze exploration game in C++ using the SFML library.
+													The user has to reach an objective somewhere in a randomly generated maze and must avoid enemies.
+													The game uses a special set of algorithms to generate mazes and spawn enemies that can roam around the map.
 												</p>
 											</div>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
+											<a href="https://github.com/Arab-Man/txt-minesweeper" target="_blank" class="image"><img src="images/pic03.jpg" alt="" /></a>
 											<div class="inner">
-												<h4 style="color:rgb(255, 255, 255)">Text-based Minesweeper</h4>
-												<p>Created a text-based version of Minesweeper using MATLAB. User can choose the
-													size of the board and mines will be randomly placed on the grid. User must reveal all
-													cells without mines to win, and revealing a cell with a mine will result in a loss.
+												<h4 style="color:rgb(255, 255, 255)"><a href="https://github.com/Arab-Man/txt-minesweeper" target="_blank">Text-based Minesweeper</a></h4>
+												<p>Created a text-based version of Minesweeper using MATLAB. 
+													User can choose the difficulty, which will determine the size of the board, and mines will be randomly placed across the grid. Revealing all empty cells results in a win, revealing a mine results in a loss.
+													The game uses optimal calculation methods to quickly reveal cells and show how many mines are adjacent to each cell.
 												</p>
 											</div>
 										</article>
